<resources>
    <string name="app_name">Notes Application</string>

    <string name="des_image">Image Description</string>
    <string name="title_all_notes">All notes</string>
    <string name="msg_number_of_notes">Number of notes</string>
    <string name="hint_note_title">Note Title</string>
    <string name="hint_note_content">Type note here ...</string>
    <string name="default_date_time">Thu, 01 Jan 1970 00:00</string>
    <string name="default_note_title">Note Title</string>
    <string name="default_note_content">Content Note</string>
    <string name="action_pick_color">Pick Color</string>
    <string name="title_Miscellaneous">Miscellaneous</string>
    <string name="action_add_image">Add image</string>
    <string name="action_delete_note">Delete note</string>
    <string name="title_dialog_delete_note">Delete note</string>
    <string name="msg_dialog_delete_note">Are you sure you want to delete this note?</string>
    <string name="action_delete">DELETE</string>
    <string name="action_cancel">CANCEL</string>
    <string name="hint_search_here">Search here</string>

    <string name="menu_all_notes">All notes</string>
    <string name="menu_tags">Tags</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tem">tem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hint_note_tag">Note tag</string>

</resources>