<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_note"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:background="@drawable/bg_item_note"
    android:backgroundTint="@color/colorItemNoteBackground">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/default_note_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/open_sans_regular"
        android:textStyle="bold"
        android:includeFontPadding="false"
        android:textColor="@color/colorTextItemNoteTitle"
        android:textSize="@dimen/_14ssp"
        android:background="@null"
        />

    <TextView
        android:id="@+id/text_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/default_date_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        android:fontFamily="@font/open_sans_italic"
        android:includeFontPadding="false"
        android:textColor="@color/colorTextItemNoteDateTime"
        android:textSize="@dimen/_10ssp"
        android:background="@null"
        />

    <TextView
        android:id="@+id/text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/default_note_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_date_time"
        android:fontFamily="@font/open_sans_regular"
        android:includeFontPadding="false"
        android:textColor="@color/colorTextItemNoteContent"
        android:textSize="@dimen/_12ssp"
        android:background="@null"
        />


</androidx.constraintlayout.widget.ConstraintLayout>