<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".views.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_actions_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@color/colorQuickActionsBarBackground"
                android:backgroundTint="@color/colorQuickActionsBarBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/bg_circle"
                    android:backgroundTint="@color/colorQuickActionsBarBackground"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorQuickActionsBarIcon"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/text_note_title"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@null"
                    android:fontFamily="@font/open_sans_regular"
                    android:hint="@string/hint_note_title"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/colorTextTitleSecondary"
                    android:textColorHint="@color/colorTextTertiary"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_done"
                    app:layout_constraintStart_toEndOf="@id/btn_back"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_more"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/bg_circle"
                    android:backgroundTint="@color/colorQuickActionsBarBackground"
                    android:src="@drawable/ic_more"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorQuickActionsBarIcon"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/btn_done"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/bg_circle"
                    android:backgroundTint="@color/colorQuickActionsBarBackground"
                    android:src="@drawable/ic_done"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_more"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorQuickActionsBarIcon"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/text_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/open_sans_italic"
                android:gravity="end"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_2sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="@string/default_date_time"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_actions_bar" />

            <EditText
                android:id="@+id/text_note_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@null"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="top"
                android:hint="@string/hint_note_content"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextTertiary"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_date_time" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>